--- a/templates/gr-template.html
+++ b/templates/gr-template.html
@@ -194,7 +194,7 @@
 
                     The N50 length, which is defined as the shortest sequence length at 50% of
                     the genome, is {{commas meta.genome_metrics.N50 0}} bp.   The L50 count, which is defined as
-                    the smallest number of contigs whose length sum produces N50, is {{commas meta.genome_metrics.N50 0}} (<table-ref></table-ref>).
+                    the smallest number of contigs whose length sum produces N50, is {{commas meta.genome_metrics.L50 0}} (<table-ref></table-ref>).
                 </p>
 
             {{else}}
